--- a/.babelrc
+++ b/.babelrc
@@ -15,6 +15,13 @@
         "libraryName": "element-ui",
         "styleLibraryName": "theme-chalk"
       }
+    ],
+    [
+      "import",
+      {
+        "libraryName": "vxe-table",
+        "style": true // 样式是否也按需加载
+      }
     ]
   ]
 }
