--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^9.8.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^4.0.0",
     "core-js": "^3.6.5",
@@ -41,10 +42,12 @@
     "vue-router": "^3.3.4",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.5.1",
+    "vxe-table": "^2.9.14",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.0.8",
+    "xe-utils": "^2.6.4",
     "yargs": "^15.4.0"
   },
   "dependencies": {
