--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass": "^1.26.10",
     "sass-loader": "^9.0.1",
     "style-loader": "^1.2.1",
+    "stylelint-webpack-plugin": "^2.1.0",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.6",
     "vue": "^2.6.11",
