--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./scripts/development.js --development",
+    "dev": "node ./scripts/development.js --development",
     "build:local": "node ./scripts/production.js --production --local",
-    "build:test": "node ./scripts/production.js --production --test"
+    "build:test": "node ./scripts/production.js --production --test",
+    "dll": "node ./scripts/dll.js"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +17,12 @@
     "@babel/preset-env": "^7.10.4",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^9.8.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.0",
+    "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^4.0.0",
     "core-js": "^3.6.5",
