--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "node ./scripts/development.js --development",
     "build:local": "node ./scripts/production.js --production --local",
     "build:test": "node ./scripts/production.js --production --test",
+    "build:volume":  "node ./scripts/production.js --production --test --volume",
     "dll": "node ./scripts/dll.js"
   },
   "keywords": [],
@@ -35,6 +36,7 @@
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.1",
     "style-loader": "^1.2.1",
@@ -48,6 +50,7 @@
     "vuex": "^3.5.1",
     "vxe-table": "^2.9.14",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.0.8",
